@@ -461,8 +461,6 @@ If an NFS3 server returns a jukebox error, Sunfish should retry the operation a 
 <p>
 Files greater than 2GB in size are reported as having a size of exactly 2GB. The data in the first 2GB of the file can be read and written to normally, but the rest of the file cannot be accessed.
 <p>
-The toggle size icon on server and export browser windows behaves differently from what might be expected.
-<p>
 <table bgcolor="#00449a" fgcolor="ffffff" width="99%"><tr><td>
 <h2><font color="#ffffff"><a name="recompiling">Recompiling</a></font></h2>
 </td></tr></table>
